@@ -15,6 +15,7 @@ Only tickets not included in 3.1.0alpha1
   - #4490, Tweak function costs (Raúl Marín)
   - #4672, Cache getSRSbySRID and getSRIDbySRS (Raúl Marín)
   - #4676, Avoid decompressing toasted geometries to read only the header (Raúl Marín)
+           Optimize cast to Postgresql point type (Raúl Marín)
 
 * Bug fixes *
   - #4652, Fix several memory related bugs in ST_GeomFromGML (Raúl Marín)
